--- a/CSCB700 Search Engine Optimization in Web/Project/my-tickets.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/my-tickets.html
@@ -215,7 +215,7 @@
           </tr>
           <tr>
             <th itemprop="index" scope="row">2</th>
-            <td itemprop="name"><atitle="Ticket Details" href="ticket-details.html">Ticket 2</a></td>
+            <td itemprop="name"><a title="Ticket Details" href="ticket-details.html">Ticket 2</a></td>
             <td itemprop="quantity">2</td>
             <td itemprop="price">49.99 lv.</td>
             <meta itemprop="priceCurrency" content="BGN" />
@@ -238,7 +238,7 @@
             <td itemprop="price">199.99 lv.</td>
             <meta itemprop="priceCurrency" content="BGN" />
             <td itemprop="event">Event 4</td>
-            <td itemprop="location">Burgas</td>
+            <td itemprop="location">Varna</td>
           </tr>
           <tr>
             <th itemprop="index" scope="row">5</th>
@@ -247,7 +247,7 @@
             <td itemprop="price">79.99 lv.</td>
             <meta itemprop="priceCurrency" content="BGN" />
             <td itemprop="event">Event 5</td>
-            <td itemprop="location">Burgas</td>
+            <td itemprop="location">Stara Zagora</td>
           </tr>
           <tr>
             <th itemprop="index" scope="row">6</th>
@@ -256,7 +256,7 @@
             <td itemprop="price">99.99 lv.</td>
             <meta itemprop="priceCurrency" content="BGN" />
             <td itemprop="event">Event 6</td>
-            <td itemprop="location">Burgas</td>
+            <td itemprop="location">Ruse</td>
           </tr>
           <tr>
             <th itemprop="index" scope="row">7</th>
@@ -265,7 +265,7 @@
             <td itemprop="price">39.99 lv.</td>
             <meta itemprop="priceCurrency" content="BGN" />
             <td itemprop="event">Event 7</td>
-            <td itemprop="location">Burgas</td>
+            <td itemprop="location">Pleven</td>
           </tr>
         </tbody>
       </table>
