xml videomap added; changed fb og:image tag's content; mobile responsive

--- a/CSCB700 Search Engine Optimization in Web/Project/about.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/about.html
@@ -41,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
@@ -187,7 +187,10 @@
                 href="assets/xmls/image-sitemap.xml"
                 >XML Imagemap</a
               >
-              <a title="XML Videomap" class="dropdown-item" href="#"
+              <a
+                title="XML Videomap"
+                class="dropdown-item"
+                href="assets/xmls/video-sitemap.xml"
                 >XML Videomap</a
               >
             </div>
@@ -267,11 +270,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-4">
-          <h3>Contact Details</h3>
-          <h6>Find us on google maps pinned location:</h6>
-          <h6>Mobile phone: +359 884 695 169</h6>
-          <h6>Email: adskidolen@gmail.com</h6>
+        <div class="col-md-4">
           <div class="card" itemscope itemtype="http://schema.org/ImageObject">
             <img
               class="card-img-top"
@@ -283,12 +282,17 @@
             />
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-md-4">
+          <h3>Contact Details</h3>
+          <h6>Find us on google maps pinned location:</h6>
+          <h6>Mobile phone: +359 884 695 169</h6>
+          <h6>Email: adskidolen@gmail.com</h6>
+        </div>
+        <div class="col-md-4">
           <div class="custom-iframe-container">
             <iframe
               src="https://www.google.com/maps/d/embed?mid=1fE-dsP8zzw1-9vVUhqmDFoKfnj-aIZYh"
-              width="730"
-              height="425"
+              height="300"
             ></iframe>
           </div>
         </div>
