--- a/CSCB700 Search Engine Optimization in Web/Project/halls.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/halls.html
@@ -17,14 +17,20 @@
     </script>
 
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta
+      name="google-site-verification"
+      content="googlee4f77c7e9ebba0ed.html"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Culture Events Hub - Halls" />
     <meta
       name="description"
       content="Here you can find all the halls where the events of the Culture Events Hub take place."
     />
-    <meta name="keywords" content="events, tickets, event halls, halls, online ticket system, culture, Bulgaria" />
+    <meta
+      name="keywords"
+      content="events, tickets, event halls, halls, online ticket system, culture, Bulgaria"
+    />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
 
     <meta property="og:title" content="Halls Page" />
@@ -35,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
@@ -146,7 +152,8 @@
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
           <li class="nav-item dropdown">
-            <a title="Information"
+            <a
+              title="Information"
               class="nav-link dropdown-toggle"
               href="#"
               id="navbarDropdown"
@@ -158,12 +165,34 @@
               Info
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="About Us" class="dropdown-item" href="about.html">About us</a>
-              <a title="Privacy Policy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <a title="About Us" class="dropdown-item" href="about.html"
+                >About us</a
+              >
+              <a
+                title="Privacy Policy"
+                class="dropdown-item"
+                href="privacy.html"
+                >Privacy Policy</a
+              >
               <div class="dropdown-divider"></div>
-              <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
-              <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
-              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+              <a
+                title="XML Sitemap"
+                class="dropdown-item"
+                href="assets/xmls/sitemap.xml"
+                >XML Sitemap</a
+              >
+              <a
+                title="XML Imagemap"
+                class="dropdown-item"
+                href="assets/xmls/image-sitemap.xml"
+                >XML Imagemap</a
+              >
+              <a
+                title="XML Videomap"
+                class="dropdown-item"
+                href="assets/xmls/video-sitemap.xml"
+                >XML Videomap</a
+              >
             </div>
           </li>
         </ul>
@@ -223,7 +252,11 @@
     </nav>
     <div class="container custom-container">
       <h1 itemprop="title" class="text-center custom-header">Halls</h1>
-      <div class="card bg-dark text-white custom-hall-card" itemscope itemtype="http://schema.org/ImageObject">
+      <div
+        class="card bg-dark text-white custom-hall-card"
+        itemscope
+        itemtype="http://schema.org/ImageObject"
+      >
         <img
           class="card-img"
           src="assets/images/halls/ndk-hall1.jpg"
@@ -232,11 +265,17 @@
         />
         <div class="card-img-overlay">
           <h5 itemprop="event" class="card-title">Event 7</h5>
-          <p itemprop="name" class="card-text">National Palace of Culture - Hall 1</p>
+          <p itemprop="name" class="card-text">
+            National Palace of Culture - Hall 1
+          </p>
           <p itemprop="location" class="card-text">Sofia, Centre</p>
         </div>
       </div>
-      <div class="card bg-dark text-white custom-hall-card" itemscope itemtype="http://schema.org/ImageObject">
+      <div
+        class="card bg-dark text-white custom-hall-card"
+        itemscope
+        itemtype="http://schema.org/ImageObject"
+      >
         <img
           class="card-img"
           src="assets/images/halls/arenca-armeec.jpg"
@@ -246,10 +285,16 @@
         <div class="card-img-overlay">
           <h5 itemprop="event" class="card-title">Event 8</h5>
           <p itemprop="name" class="card-text">Arena Armeec Sofia</p>
-          <p itemprop="location" class="card-text">bul. Asen Jordanov 1, Sofia</p>
+          <p itemprop="location" class="card-text">
+            bul. Asen Jordanov 1, Sofia
+          </p>
         </div>
       </div>
-      <div class="card bg-dark text-white custom-hall-card" itemscope itemtype="http://schema.org/ImageObject">
+      <div
+        class="card bg-dark text-white custom-hall-card"
+        itemscope
+        itemtype="http://schema.org/ImageObject"
+      >
         <img
           class="card-img"
           src="assets/images/halls/plovdiv-kolodruma.jpg"
@@ -259,7 +304,9 @@
         <div class="card-img-overlay">
           <h5 itemprop="event" class="card-title">Event 9</h5>
           <p itemprop="name" class="card-text">Hall "Kolodruma"</p>
-          <p itemprop="location" class="card-text">ul. Naycho Tsanov, Plovdiv</p>
+          <p itemprop="location" class="card-text">
+            ul. Naycho Tsanov, Plovdiv
+          </p>
         </div>
       </div>
     </div>
