--- a/CSCB700 Search Engine Optimization in Web/Project/login.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/login.html
@@ -17,14 +17,17 @@
     </script>
 
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta
+      name="google-site-verification"
+      content="googlee4f77c7e9ebba0ed.html"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Culture Events Hub - Login" />
+    <meta name="description" content="Login Page for the Culture Events Hub." />
     <meta
-      name="description"
-      content="Login Page for the Culture Events Hub."
+      name="keywords"
+      content="events, tickets, users, login, online ticket system, Bulgaria, culture"
     />
-    <meta name="keywords" content="events, tickets, users, login, online ticket system, Bulgaria, culture" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
 
     <meta property="og:title" content="Login Page" />
@@ -35,14 +38,14 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
       property="og:description"
       content="Culture Events Hub - Online Ticket System"
     />
-    
+
     <title>Culture Events Hub - Login</title>
     <link
       rel="shortcut icon"
@@ -146,7 +149,8 @@
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
           <li class="nav-item dropdown">
-            <a title="Information"
+            <a
+              title="Information"
               class="nav-link dropdown-toggle"
               href="#"
               id="navbarDropdown"
@@ -158,12 +162,34 @@
               Info
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="About Us" class="dropdown-item" href="about.html">About us</a>
-              <a title="Privacy Policy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <a title="About Us" class="dropdown-item" href="about.html"
+                >About us</a
+              >
+              <a
+                title="Privacy Policy"
+                class="dropdown-item"
+                href="privacy.html"
+                >Privacy Policy</a
+              >
               <div class="dropdown-divider"></div>
-              <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
-              <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
-              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+              <a
+                title="XML Sitemap"
+                class="dropdown-item"
+                href="assets/xmls/sitemap.xml"
+                >XML Sitemap</a
+              >
+              <a
+                title="XML Imagemap"
+                class="dropdown-item"
+                href="assets/xmls/image-sitemap.xml"
+                >XML Imagemap</a
+              >
+              <a
+                title="XML Videomap"
+                class="dropdown-item"
+                href="assets/xmls/video-sitemap.xml"
+                >XML Videomap</a
+              >
             </div>
           </li>
         </ul>
@@ -207,7 +233,9 @@
       </nav>
     </div>
     <div class="container login-container">
-      <h1 itemprop="title" class="text-center custom-login-register-header">Login</h1>
+      <h1 itemprop="title" class="text-center custom-login-register-header">
+        Login
+      </h1>
       <form>
         <div class="form-group">
           <label for="username">Username</label>
@@ -235,7 +263,9 @@
           >
         </div>
         <button type="submit" class="btn btn-dark">
-          <a title="Login" class="custom-link-button" href="index.html">Login</a>
+          <a title="Login" class="custom-link-button" href="index.html"
+            >Login</a
+          >
         </button>
       </form>
     </div>
