--- a/CSCB700 Search Engine Optimization in Web/Project/privacy.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/privacy.html
@@ -17,14 +17,20 @@
     </script>
 
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta
+      name="google-site-verification"
+      content="googlee4f77c7e9ebba0ed.html"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Culture Events Hub - Privacy Policy" />
     <meta
       name="description"
       content="The Privacy Policy of the Culture Events Hub."
     />
-    <meta name="keywords" content="events, tickets, privacy policy, online ticket system, culture, Bulgaria" />
+    <meta
+      name="keywords"
+      content="events, tickets, privacy policy, online ticket system, culture, Bulgaria"
+    />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
 
     <meta property="og:title" content="Privacy Policy Page" />
@@ -35,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
@@ -162,7 +168,10 @@
               <a title="About Us" class="dropdown-item" href="about.html"
                 >About us</a
               >
-              <a title="Privacy Policy" class="dropdown-item" href="privacy.html"
+              <a
+                title="Privacy Policy"
+                class="dropdown-item"
+                href="privacy.html"
                 >Privacy Policy</a
               >
               <div class="dropdown-divider"></div>
@@ -178,7 +187,10 @@
                 href="assets/xmls/image-sitemap.xml"
                 >XML Imagemap</a
               >
-              <a title="XML Videomap" class="dropdown-item" href="#"
+              <a
+                title="XML Videomap"
+                class="dropdown-item"
+                href="assets/xmls/video-sitemap.xml"
                 >XML Videomap</a
               >
             </div>
@@ -623,7 +635,9 @@
           <p>
             The information gathered by Google Places is held in accordance with
             the Privacy Policy of Google:
-            <a title="Privacy Policy" href="https://www.google.com/intl/en/policies/privacy/"
+            <a
+              title="Privacy Policy"
+              href="https://www.google.com/intl/en/policies/privacy/"
               >https://www.google.com/intl/en/policies/privacy/</a
             >
           </p>
