--- a/CSCB700 Search Engine Optimization in Web/Project/upcoming-events.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/upcoming-events.html
@@ -41,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
@@ -187,7 +187,10 @@
                 href="assets/xmls/image-sitemap.xml"
                 >XML Imagemap</a
               >
-              <a title="XML Videomap" class="dropdown-item" href="#"
+              <a
+                title="XML Videomap"
+                class="dropdown-item"
+                href="assets/xmls/video-sitemap.xml"
                 >XML Videomap</a
               >
             </div>
