--- a/CSCB700 Search Engine Optimization in Web/Project/all-events.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/all-events.html
@@ -27,6 +27,22 @@
     <meta name="keywords" content="events, tickets, online ticket system, culture, culture events" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
 
+    <meta property="og:title" content="All Events Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/all-events.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
+
     <title>Culture Events Hub - All Events</title>
     <link
       rel="shortcut icon"
@@ -147,7 +163,7 @@
               <div class="dropdown-divider"></div>
               <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
               <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
-              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+              <a title="XML Videomap" class="dropdown-item" href="assets/xmls/video-sitemap.xml">XML Videomap</a>
             </div>
           </li>
         </ul>
