--- a/CSCB700 Search Engine Optimization in Web/Project/index.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
@@ -142,7 +142,7 @@
               <div class="dropdown-divider"></div>
               <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
               <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
-              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+              <a title="XML Videomap" class="dropdown-item" href="assets/xmls/video-sitemap.xml">XML Videomap</a>
             </div>
           </li>
         </ul>
@@ -216,10 +216,10 @@
       <div class="custom-video-container">
           <h3 itemprop="title" class="custom-second-header">Latest News</h3>
           <iframe 
-          width="560" 
-          height="315" 
+         
           src="https://www.youtube.com/embed/nlTR052uku0" 
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen
           itemprop="contentUrl"
           >
