--- a/CSCB700 Search Engine Optimization in Web/Project/register.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/register.html
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
@@ -163,7 +163,7 @@
               <div class="dropdown-divider"></div>
               <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
               <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
-              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+              <a title="XML Videomap" class="dropdown-item" href="assets/xmls/video-sitemap.xml">XML Videomap</a>
             </div>
           </li>
         </ul>
@@ -279,7 +279,7 @@
           />
         </div>
         <div class="form-row">
-          <div class="form-group col-md-6">
+          <div class="form-group col-md-4">
             <label for="inputCity">City</label>
             <input type="text" class="form-control" id="inputCity" />
           </div>
@@ -294,7 +294,7 @@
               <option>Macedonia</option>
             </select>
           </div>
-          <div class="form-group col-md-2">
+          <div class="form-group col-md-4">
             <label for="inputZip">Zip</label>
             <input type="text" class="form-control" id="inputZip" />
           </div>
