--- a/CSCB700 Search Engine Optimization in Web/Project/ticket-bought.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/ticket-bought.html
@@ -17,14 +17,20 @@
     </script>
 
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="googlee4f77c7e9ebba0ed.html">
+    <meta
+      name="google-site-verification"
+      content="googlee4f77c7e9ebba0ed.html"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Culture Events Hub - Confirmation" />
     <meta
       name="description"
       content="Successfull payment in the Culture Events Hub."
     />
-    <meta name="keywords" content="events, tickets, online ticket system, culture, Bulgaria, payment" />
+    <meta
+      name="keywords"
+      content="events, tickets, online ticket system, culture, Bulgaria, payment"
+    />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
 
     <meta property="og:title" content="Confirmation Page" />
@@ -35,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+      content="https://cultureeventshub.000webhostapp.com/assets/images/logo.png"
     />
     <meta property="og:site_name" content="Culture Events Hub" />
     <meta
@@ -146,7 +152,8 @@
             <a title="Halls" class="nav-link" href="halls.html">Halls</a>
           </li>
           <li class="nav-item dropdown">
-            <a title="Information"
+            <a
+              title="Information"
               class="nav-link dropdown-toggle"
               href="#"
               id="navbarDropdown"
@@ -158,12 +165,34 @@
               Info
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a title="About Us" class="dropdown-item" href="about.html">About us</a>
-              <a title="Privacy Policy" class="dropdown-item" href="privacy.html">Privacy Policy</a>
+              <a title="About Us" class="dropdown-item" href="about.html"
+                >About us</a
+              >
+              <a
+                title="Privacy Policy"
+                class="dropdown-item"
+                href="privacy.html"
+                >Privacy Policy</a
+              >
               <div class="dropdown-divider"></div>
-              <a title="XML Sitemap" class="dropdown-item" href="assets/xmls/sitemap.xml">XML Sitemap</a>
-              <a title="XML Imagemap" class="dropdown-item" href="assets/xmls/image-sitemap.xml">XML Imagemap</a>
-              <a title="XML Videomap" class="dropdown-item" href=#>XML Videomap</a>
+              <a
+                title="XML Sitemap"
+                class="dropdown-item"
+                href="assets/xmls/sitemap.xml"
+                >XML Sitemap</a
+              >
+              <a
+                title="XML Imagemap"
+                class="dropdown-item"
+                href="assets/xmls/image-sitemap.xml"
+                >XML Imagemap</a
+              >
+              <a
+                title="XML Videomap"
+                class="dropdown-item"
+                href="assets/xmls/video-sitemap.xml"
+                >XML Videomap</a
+              >
             </div>
           </li>
         </ul>
