fixed responsive ticket table; small changes

--- a/CSCB700 Search Engine Optimization in Web/Project/about.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/about.html
@@ -315,6 +315,9 @@
           >
             <i class="fab fa-linkedin custom-social-icon"></i>
           </a>
+          <a title="GitHub Page" href="https://github.com/paunski7777777">
+            <i class="fab fa-github custom-social-icon"></i>
+          </a>
         </div>
       </div>
     </div>
