--- a/CSCB700 Search Engine Optimization in Web/Project/index.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/index.html
@@ -188,19 +188,19 @@
         <div id="eventsCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner custom-carousel">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="assets/images/events/play.jpg" alt="First slide" height="600" width="200">
+              <img class="d-block w-100" src="assets/images/events/play.jpg" alt="Event Play slide" height="600" width="200">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/images/events/concert.jpg" alt="Second slide" height="600" width="200">
+              <img class="d-block w-100" src="assets/images/events/concert.jpg" alt="Event Concert slide" height="600" width="200">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/images/events/exhibition.jpg" alt="Third slide" height="600" width="200">
+              <img class="d-block w-100" src="assets/images/events/exhibition.jpg" alt="Event exhibition slide" height="600" width="200">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/images/events/ballet.jpg" alt="Third slide" height="600" width="200">
+              <img class="d-block w-100" src="assets/images/events/ballet.jpg" alt="Event ballet slide" height="600" width="200">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/images/events/opera.jpg" alt="Third slide" height="600" width="200">
+              <img class="d-block w-100" src="assets/images/events/opera.jpg" alt="Event opera slide" height="600" width="200">
             </div>
           </div>
           <a title="Previous Slide" class="carousel-control-prev" href="#eventsCarousel" role="button" data-slide="prev">
