--- a/CSCB700 Search Engine Optimization in Web/Project/my-tickets.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/my-tickets.html
@@ -192,7 +192,8 @@
     </nav>
     <div class="container custom-container">
       <h1 itemprop="title" class="text-center custom-header">My Tickets</h1>
-      <table  class="table table-hover table-dark table-responsive">
+      <div class=" table-responsive">
+      <table  class="table table-hover table-dark">
         <thead class="custom-table-head">
           <tr>
             <th scope="col">#</th>
@@ -269,6 +270,7 @@
           </tr>
         </tbody>
       </table>
+      </div>
     </div>
   </body>
   <footer class="text-center custom-footer">
